Fix: Images resize Fix: Team alignment fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -552,6 +552,7 @@ background-color: #eef4f7;
     margin-bottom: 30px;
 }
 
+.img{ width: 100%; height:  auto;}
 
 
 #team .name {
